--- a/lala/index.html
+++ b/lala/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <meta name="viewport" content="initial-scale=1.0, user-scalable=no" />
-<title>SLR with HTML-5 Image Tiles</title>
+<title>DemoMap for LL // I'd still get a Tacoma if it is close..</title>
 <link rel="stylesheet" href="http://cdn.leafletjs.com/leaflet-0.7.2/leaflet.css" />
 <script src="http://cdn.leafletjs.com/leaflet-0.7.2/leaflet.js"></script>
 <style type="text/css">
